# hds-v5

./: .gitignore  Makefile.am  README  README.md  component.xml  component.xml.in  configure.ac  dat1.h  dat1AllocLoc.c  dat1Annul.c  dat1CloseAllIds.c  dat1Coords2CellName.c  dat1CreateStructureCell.c  dat1CvtChar.c  dat1CvtLogical.c  dat1DumpLoc.c  dat1EncodeSubscript.c  dat1EraseHandle.c  dat1ExportDims.c  dat1FixNameCell.c  dat1FreeHandle.c  dat1FreeLoc.c  dat1GetAttr.c  dat1GetAttrBool.c  dat1GetAttrHdsdims.c  dat1GetAttrInt.c  dat1GetAttrString.c  dat1GetBounds.c  dat1GetFullName.c  dat1GetParentID.c  dat1H5EtoEMS.c  dat1Handle.c  dat1HandleLock.c  dat1HandleMsg.c  dat1ImportDims.c  dat1ImportFloc.c  dat1Index2Coords.c  dat1InitHDF5.c  dat1IsStructure.c  dat1IsTopLevel.c  (+119 more)
